--- a/exercise/app/view1/view1.html
+++ b/exercise/app/view1/view1.html
@@ -1,1 +1,3 @@
 <p>This is the partial for view 1.</p>
+<button ng-click="vm.initImageWithRandomURL()">Click me!</button><br>
+<img ng-src="{{vm.image}}" ng-if="vm.image.length != 0" style="max-width: 500px;">
