--- a/exercise/app/view1/view1.html
+++ b/exercise/app/view1/view1.html
@@ -1,3 +1,4 @@
 <p>This is the partial for view 1.</p>
 <button ng-click="vm.initImageWithRandomURL()">Click me!</button><br>
-<img ng-src="{{vm.image}}" ng-if="vm.image.length != 0" style="max-width: 500px;">
+<img ng-src="{{vm.image}}" ng-if="vm.image.length != 0" style="max-width: 500px;"><br>
+<img ng-src="{{vm.imageFromServer}}" ng-if="vm.imageFromServer.length != 0" style="max-width: 500px;">
