ADD function that uses  and injects a factory as dependency to View2Ctrl

--- a/exercise/app/view2/view2.html
+++ b/exercise/app/view2/view2.html
@@ -1,12 +1,9 @@
 <p>This is the partial for view 2.</p>
-<button ng-click="vm.run()">Click me!</button><br>
+<button ng-click="vm.loop()">Click me!</button><br>
 <div>Promise1: {{vm.promise1}}</div>
 <div>Promise2: {{vm.promise2}}</div>
 <div>Promise3: {{vm.promise3}}</div>
 <div>Promise4: {{vm.promise4}}</div>
 <div>Promise5: {{vm.promise5}}</div>
-
-<div>Status1: {{vm.status1}}</div>
-<div>Status2: {{vm.status2}}</div>
 <br>
-<br>
+<div>{{vm.status1}}</div>
