ADD single unit test;

--- a/exercise/app/view2/view2.html
+++ b/exercise/app/view2/view2.html
@@ -6,4 +6,4 @@
 <div>Promise4: {{vm.promise4}}</div>
 <div>Promise5: {{vm.promise5}}</div>
 <br>
-<div>{{vm.status1}}</div>
+<div>{{vm.state}}</div>
