--- a/exercise/app/index.html
+++ b/exercise/app/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+  <!--<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">-->
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -18,6 +18,7 @@
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
+    <li><a href="#/users">users</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -36,7 +37,16 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="users/users.js"></script>
+  <script src="users/models/User.js"></script>
+  <script src="users/models/Users.js"></script>
+  <script src="users/directives/user-form.js"></script>
   <script src="factories/service.factory.js"></script>
+  <script src="components/components.js"></script>
+  <script src="components/form/form.js"></script>
+  <!--<script src="components/form/directives/create-form.js"></script>-->
+  <!--<script src="components/form/directives/update-form.js"></script>-->
+  <!--<script src="components/form/directives/show-form.js"></script>-->
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
