* Configuracion Karma * Modificacion formulario usuario

--- a/exercise/app/users/directives/user-form.html
+++ b/exercise/app/users/directives/user-form.html
@@ -1,4 +1,4 @@
-<div ng-init="initialize()">
+<div>
 
     <div ng-if="currentMode">
         <generic-form fields="userFields" action="actionUser()" mode="currentMode"></generic-form>
